[package]
name = "OSM_to_Euroscope"
version = "0.1.0"
authors = ["Marcel <mtrnord1@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
osmio = "0.2.1"
fnv = "1.0.7"
clap = "2.33.3"
reqwest = { version = "0.10", features = ["json"] }
tokio = { version = "0.2", features = ["full"] }
percent-encoding = "2.1.0"
